about reviews services coverage sections' responsiveness added

--- a/src/index.css
+++ b/src/index.css
@@ -17,3 +17,14 @@
 body {
   font-family: "Urbanist", sans-serif;
 }
+
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+
+.scrollbar-hide {
+  -ms-overflow-style: none;
+  /* IE and Edge */
+  scrollbar-width: none;
+  /* Firefox */
+}
